packages/build/tests/error/build/fixtures/cancel_compat/plugin.js
module.exports = {
  async onInit({
    utils: {
      build: { cancel },
    },
  }) {
    cancel('test')
  },
}
